--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,8 @@ Manuscript/
 # Figures
 Figures/
 
-LTWCD_analysis_v2.rmd
-LTWCD_analysis_v3.rmd
-LTWCD_analysis_v2.pdf
-LTWCD_analysis_v3.pdf
+# old analyeses
+LTCWD_analysis_v2.Rmd
+LTCWD_analysis_v3.Rmd
+LTCWD_analysis_v2.pdf
+LTCWD_analysis_v3.pdf
