--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,4 @@ Manuscript/
 # Figures
 Figures/
 
-LTWCD_analysis_v2.rmd
-LTWCD_analysis_v3.rmd
-LTWCD_analysis_v2.pdf
-LTWCD_analysis_v3.pdf
+vault/
